fix-z-index

--- a/draft-js-sidebar-plugin/src/sidebarStyles.css
+++ b/draft-js-sidebar-plugin/src/sidebarStyles.css
@@ -1,4 +1,4 @@
 .wrapper {
   position: absolute;
-  z-index: 3;
+  z-index: 2;
 }
