--- a/draft-js-toolbar-plugin/src/toolbarStyles.css
+++ b/draft-js-toolbar-plugin/src/toolbarStyles.css
@@ -6,6 +6,6 @@
   background: #fff;
   border-radius: 2px;
   box-shadow: 0 1px 18px 0 rgba(0, 0, 0, 0.3);
-  z-index: 2;
+  z-index: 3;
   box-sizing: border-box;
 }
